--- a/content/practicals/03-MHQuestions.html
+++ b/content/practicals/03-MHQuestions.html
@@ -91,33 +91,14 @@ plot(sampleMH$alpha, type = &quot;h&quot;, xlab = &quot;Itération&quot;, ylab =
     ylim = c(0, 1), col = &quot;springgreen&quot;)
 plot(sampleMH$theta, type = &quot;l&quot;, xlab = &quot;Itération&quot;, ylab = expression(paste(&quot;Valeur échantillonnée pour &quot;, 
     theta)), ylim = c(0, 1))</code></pre>
-<p><img src="/practicals/03-MHQuestions_files/figure-html/MHcomp-1.png" width="768" /></p>
-<pre class="r"><code>cat</code></pre>
-<p>function (…, file = "“, sep =” “, fill = FALSE, labels = NULL,
-append = FALSE)
-{
-if (is.character(file))
-if (file ==”“)
-file &lt;- stdout()
-else if (startsWith(file,”|“)) {
-file &lt;- pipe(substring(file, 2L),”w“)
-on.exit(close(file))
-}
-else {
-file &lt;- file(file, ifelse(append,”a“,”w"))
-on.exit(close(file))
-}
-.Internal(cat(list(…), file, sep, fill, labels, append))
-}
-&lt;bytecode: 0x7fa047b5b0a8&gt;
-&lt;environment: namespace:base&gt;</p></li>
-<li><p>Afin de mieux illustrer le fonctionnement de l’algorithme de Metropolis-Hastings, nous allons modifier la loi stationnaire cible de la chaîne de Markov en ne considérant que <span class="math inline">\(100\)</span> obversations, parmi lequelles <span class="math inline">\(49\)</span> naissances sont des filles, et en changeant l’<em>a priori</em> pour une loi <span class="math inline">\(\text{Beta}(\alpha = 3, \beta=3)\)</span>.
+<p><img src="/practicals/03-MHQuestions_files/figure-html/MHcomp-1.png" width="768" /></p></li>
+<li><p>Afin de mieux illustrer le fonctionnement de l’algorithme de Metropolis-Hastings, nous allons modifier la loi stationnaire cible de la chaîne de Markov en ne considérant que <span class="math inline">\(100\)</span> observations, parmi lequelles <span class="math inline">\(49\)</span> naissances sont des filles, et en changeant l’<em>a priori</em> pour une loi <span class="math inline">\(\text{Beta}(\alpha = 3, \beta=3)\)</span>.
 Reprogrammer une fonction <code>post_num_beta()</code> calculant le numérateur de la loi <em>a posteriori</em> correspondante (d’après la formule vue dans le cours), puis faites tourner l’algorithme <code>monMH()</code> avec <span class="math inline">\(10\,000\)</span> itérations.<br />
-NB : On conserve donc une loi instrumentale uniforme (celle-ci n’est pas obligatoirement égale à l’<em>a priori</em>.</p>
+NB : On conserve donc une loi instrumentale uniforme (celle-ci n’est obligatoirement égale à l’<em>a priori</em>). Si le temps le permet, utiliser également l’<em>a priori</em> <span class="math inline">\(\text{Beta}\)</span> pour la loi instrumentale.</p>
 <pre class="r"><code>post_num_beta &lt;- function(theta, log = TRUE, a = 3, b = 3) {
 
-    n &lt;- 100  #nombre d&#39;essais (naissances)
-    S &lt;- 49  #nombre de succès (naissances féminines)
+    n &lt;- 100  # nombre d&#39;essais (naissances)
+    S &lt;- 49  # nombre de succès (naissances féminines)
 
     if (log) {
         num &lt;- (a + S - 1) * (log(theta)) + (b + n - S - 1) * log(1 - theta)
@@ -178,7 +159,7 @@ sampleMH &lt;- monMH_marchalea(20000, post_num = post_num_hist)
 par(mfrow=c(2,2))
 plot(density(sampleMH$theta[-c(1:1000)]), col = &quot;red&quot;, #xlim=c(0,1),
      ylab = &quot;Densité de probabilité a posteriori&quot;, 
-     xlab=expression(theta), main = &quot;&quot;)
+     xlab=expression(theta), main = &quot;Zoom&quot;)
 curve(dbeta(x, 241945 + 1, 251527+1), from = 0, to = 1, n = 10000, add = TRUE)
 legend(&quot;topright&quot;, c(&quot;M-H&quot;, &quot;théorique&quot;), col = c(&quot;red&quot;, &quot;black&quot;), lty = 1)
 plot(sampleMH$alpha, type = &quot;h&quot;, xlab = &quot;Itération&quot;, 
